# Android-OpenCL-Stubs

./: .gitignore  CMakeLists.txt  README.md  default.env  example.env  opencl_stubs_11.cpp  opencl_stubs_12.cpp  opencl_stubs_20.cpp
CMake/: android.toolchain.cmake  crystax.toolchain.cmake
dev_scripts/: _common.bash  build.bash  config.bash  config_and_build.bash
